--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mongoose": "^5.12.14",
     "mongoose-encryption": "^2.1.0",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-instagram": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   }
